# Retext

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: build.bat
src/rewrite/: __init__.py  clipboard.py  config.py  hotkey.py  logviewer.py  main.py  rewriter.py  settings.py  tkroot.py  win32input.py
src/rewrite/providers/: __init__.py  base.py  gemini.py
tests/: conftest.py  test_config.py  test_providers.py  test_rewriter.py
